[gd_scene load_steps=5 format=3 uid="uid://bdn07kqjjea1m"]

[ext_resource type="PackedScene" uid="uid://iyqemiu386sk" path="res://scenes/complexed_modules/Cannon/cannon.tscn" id="1_i1a3g"]
[ext_resource type="Script" path="res://scenes/complexed_modules/simple_cannon/simple_cannon.gd" id="2_dueg5"]
[ext_resource type="Resource" uid="uid://bbb53fg3iyutc" path="res://resourses/bullet_blast_resource/simple_bullet.tres" id="3_mjbeg"]
[ext_resource type="Resource" uid="uid://clnhucesm074r" path="res://resourses/cannon_resource/simple_cannon.tres" id="4_kdhy4"]

[node name="SimpleCannon" instance=ExtResource("1_i1a3g")]
script = ExtResource("2_dueg5")
bullet_blast_resource = ExtResource("3_mjbeg")
cannon_resource = ExtResource("4_kdhy4")

[connection signal="timeout" from="Time Between shots" to="." method="_on_time_between_shots_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
